Fix spacings on small screens

--- a/source/wp-content/themes/wporg-news-2021/sass/post/_content.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/post/_content.scss
@@ -3,8 +3,13 @@
 
 	.wp-block-gallery,
 	.wp-block-image {
-		margin-top: 70px;
-		margin-bottom: 70px;
+		margin-top: 40px;
+		margin-bottom: 40px;
+
+		@include break-mobile() {
+			margin-top: 70px;
+			margin-bottom: 70px;
+		}
 	}
 }
 
