--- a/source/wp-content/themes/wporg-news-2021/sass/post/_header.scss
+++ b/source/wp-content/themes/wporg-news-2021/sass/post/_header.scss
@@ -22,14 +22,14 @@
 
 	.single &,
 	.page & {
-		margin-top: 20px;
+		margin-top: 8px;
 
 		@include break-mobile() {
 			margin-top: 32px;
-		}
 
-		.wp-block-post-date {
-			margin: calc(var(--wp--custom--margin--vertical) / 2) 0 0;
+			.wp-block-post-date {
+				margin: calc(var(--wp--custom--margin--vertical) / 2) 0 0;
+			}
 		}
 
 		.wp-block-post-author,
@@ -38,8 +38,13 @@
 		}
 
 		+ .wp-block-separator {
-			margin-top: 70px;
-			margin-bottom: 70px;
+			margin-top: 40px;
+			margin-bottom: 40px;
+
+			@include break-mobile() {
+				margin-top: 70px;
+				margin-bottom: 70px;
+			}
 		}
 	}
 }
@@ -54,10 +59,11 @@
 	}
 
 	.entry-meta {
-		font-size: var(--wp--preset--font-size--small);
+		margin-bottom: 25px;
 
 		@include break-wide() {
 			grid-area: entry-meta;
+			margin-bottom: 0;
 		}
 	}
 
